net/foo-service.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
    svc: foo-bar
spec:
  containers:
  - name: foo-app # stesso nome contenuto all'interno dei metadata
    image: nginx:1.22.0
    volumeMounts:
    - name: config
      mountPath: //usr/share/nginx/html
      readOnly: true
  volumes:
  - name: config
    configMap:
      name: foo-config
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
  - port: 80
