net/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: da-service
spec:
  selector:
    app: worker-test-worker
  ports:
    - port: 80
      targetPort: 3000
